# ESRGAN

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/ml/: train.py
app/ml/loss/: loss.py
app/ml/model/: model.py
app/ml/utils/: utils.py
