[tool.poetry]
name = "esrgan"
version = "0.1.0"
description = ""
authors = ["Phong <phongdtd@bap.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.1"
tqdm = "^4.64.1"
Pillow = "^9.2.0"
opencv-python = "^4.6.0.66"
torchvision = "^0.13.1"
albumentations = "^1.3.0"
dataset = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
